# browseruse-axecore

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ai_agent/: execution_agent.py
src/prompts/: criteria.py  prompt.py
tests/: a11y_ai.py
