[project]
name = "browseruse-axecore"
version = "0.0.1"
description = "Integrating axe-core with browser-use to automatically detect a11y issues with AI and Test automation."
authors = [
    {name = "Hazem Khaled",email = "hazem.mkhaled@icloud.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "browser-use==0.1.23"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = "C:\\Users\\hazem.khaled\\AppData\\Local\\pycache"
